plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.16'
    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
}


intellij {
    def ideVersion = System.getenv().getOrDefault("lib-support", "IU-172.3757.29")
    println("Using ide version: ${ideVersion}")
    version ideVersion
    // The artifact name is deliberately not "live-plugin" because plugins are stored in the "live-plugins" directory.
    // The "LivePlugin" directory is deleted on each plugin update so it's good make it distinct from "live-plugins".
    pluginName = "lib-support"
    downloadSources = true
    sameSinceUntilBuild = false
    updateSinceUntilBuild = false
    plugins = ["Kotlin", "java"]
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

sourceSets {
    pluginUtilKotlin {
        kotlin { srcDir "src/plugin-util-kotlin" }
        compileClasspath = main.output + configurations.compileClasspath + configurations.pluginUtilKotlinCompileClasspath
    }
}

jar {
    from sourceSets.pluginUtilKotlin.output
}


group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2019.3.3'
}
compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}